Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/lambda/ExceptionsInLambda.out
ExceptionsInLambda.java:20:25: compiler.err.unreported.exception.need.to.catch.or.throw: java.io.FileNotFoundException
ExceptionsInLambda.java:23:32: compiler.err.unreported.exception.need.to.catch.or.throw: java.io.IOException
ExceptionsInLambda.java:28:22: compiler.err.unreported.exception.need.to.catch.or.throw: java.io.FileNotFoundException
3 errors
